welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: '<-' expected but ')' found.
  for (a<0 to 5){
               ^Diagonal:18: error: illegal start of simple expression
}
^